Fix issue with overlapping

--- a/src/AppBundle/Resources/assets/scss/components/_alert.scss
+++ b/src/AppBundle/Resources/assets/scss/components/_alert.scss
@@ -43,8 +43,6 @@
     background: #e8f4fd url(/images/icons/info.png) 10px 10px no-repeat;
     border-left: 3px solid #1d8feb;
     margin-bottom: 0;
-    width: 53%;
+    width: 95%;
     padding-left: 50px;
-    position: absolute;
-    bottom: 0;
 }
